--- a/instance.cfg
+++ b/instance.cfg
@@ -1,9 +1,10 @@
 InstanceType=OneSix
 MaxMemAlloc=4096
 MinMemAlloc=4096
+JvmArgs=-XX:+AlwaysPreTouch
 OverrideCommands=true
 OverrideConsole=false
-OverrideJavaArgs=false
+OverrideJavaArgs=true
 OverrideJavaLocation=false
 OverrideMemory=true
 OverrideWindow=false
