--- a/manifest.yml
+++ b/manifest.yml
@@ -244,3 +244,10 @@ mods:
     optional: true
 - pregenforge:
     serveronly: true
+# OptiFine
+- entity-culling:
+    clientonly: true
+- optiforge:
+- OptiFine:
+    optional: true
+    url: 'https://get.kalka.io/Optifine?version=OptiFine_1.16.5_HD_U_G8.jar'
