add macaw's stuff

--- a/manifest.yml
+++ b/manifest.yml
@@ -146,6 +146,15 @@ mods:
 - login-shield:
 - lollipop:
 - lumberjack:
+- macaws-paintings:
+- macaws-doors:
+- macaws-trapdoors:
+- macaws-fences-and-walls:
+- macaws-lights-and-lamps:
+- macaws-bridges:
+- macaws-windows:
+- macaws-furniture:
+- macaws-roofs:
 - mantle:
 - mcjtylib:
 - mekanism-additions:
