add dynamic surroundings

--- a/manifest.yml
+++ b/manifest.yml
@@ -99,6 +99,7 @@ mods:
 - decorative-blocks-modded-compat:
 - decorative-blocks:
 - draconic-evolution:
+- dynamic-surroundings:
 - druidcraft:
 - effortless-building:
 - eidolon:
