add precise block placing, nether's delight

--- a/manifest.yml
+++ b/manifest.yml
@@ -171,6 +171,7 @@ mods:
 - morpheus:
 - mystical-world:
 - natures-compass:
+- nethers-delight:
 - nomowanderer:
 - obfuscate:
 - observerlib:
@@ -183,6 +184,7 @@ mods:
 - polymorph:
 - powah:
 - productivebees:
+- preciseblockplacing:
 - quark:
 - ranged-pumps:
 - refined-storage:
