forgot to change a few params

--- a/instance.cfg
+++ b/instance.cfg
@@ -4,13 +4,13 @@ MinMemAlloc=6144
 JvmArgs=-XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC  -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1
 OverrideCommands=true
 OverrideConsole=false
-OverrideJavaArgs=false
+OverrideJavaArgs=true
 OverrideJavaLocation=false
 OverrideMemory=true
 OverrideWindow=false
 PermGen=128
 PostExitCommand=
-PreLaunchCommand=$INST_DIR\\wolfpackmaker\\multimc.bat -r Wolfpack-Odin -c -mmc -rs latest
+PreLaunchCommand=$INST_DIR\\wolfpackmaker\\multimc.bat -r Wolfpack-Odin -c -mmc -rs latest-halogen
 WrapperCommand=
 iconKey=wolfpackodin
 name=Wolfpack-Odin
