add connected glass

--- a/manifest.yml
+++ b/manifest.yml
@@ -81,6 +81,7 @@ mods:
 - cofh-core:
 - coloured-tooltips:
 - compact-machines:
+- connected-glass:
 - construction-wand:
 - controlling:
 - cooking-for-blockheads:
