add project red deps

--- a/manifest.yml
+++ b/manifest.yml
@@ -69,6 +69,7 @@ mods:
 - buzzier-bees:
 - caelus:
 - carry-on:
+- cb-multipart:
 - cc-tweaked:
 - charm-reforged:
 - chemlib:
@@ -212,6 +213,7 @@ mods:
 - savage-and-ravage:
 - save-my-stronghold:
 - scannable:
+- scorge:
 - server-tab-info:
 - simple-farming:
 - simply-jetpacks-2:
