update DE, BrandonsCore, add Better End, Outer End, Tetranomicon

--- a/manifest.yml
+++ b/manifest.yml
@@ -62,6 +62,7 @@ mods:
 - blockcarpentry:
 - blood-magic:
 - brandons-core:
+    url: https://nexus.covers1624.net/repository/maven-hosted/com/brandon3055/brandonscore/BrandonsCore/1.16.5-3.0.9.235/BrandonsCore-1.16.5-3.0.9.235-universal.jar
 - bookshelf:
 - botania:
 - bountiful:
@@ -102,6 +103,7 @@ mods:
 - decorative-blocks-modded-compat:
 - decorative-blocks:
 - draconic-evolution:
+    url: https://nexus.covers1624.net/repository/maven-hosted/com/brandon3055/draconicevolution/Draconic-Evolution/1.16.5-3.0.13.410/Draconic-Evolution-1.16.5-3.0.13.410-universal.jar
 - druidcraft:
 - effortless-building:
 - eidolon:
@@ -271,3 +273,6 @@ mods:
     optional: true
 - pregenforge:
     serveronly: true
+- betterend-forge-port:
+- the-outer-end:
+- tetranomicon:
