--- a/manifest.yml
+++ b/manifest.yml
@@ -81,6 +81,7 @@ mods:
 - cloth-config-forge:
 - clumps:
 - codechicken-lib-1-8:
+    url: https://nexus.covers1624.net/repository/maven-hosted/codechicken/CodeChickenLib/1.16.5-4.0.3.434/CodeChickenLib-1.16.5-4.0.3.434-universal.jar
 - cofh-core:
 - coloured-tooltips:
 - compact-machines:
