--- a/manifest.yml
+++ b/manifest.yml
@@ -263,6 +263,7 @@ mods:
 - extreme-sound-muffler:
 - fastfurnace-minus-replacement:
 - rsinfinitybooster:
+- rs-requestify:
 - smooth-boot-forge:
 - tinkers-mechworks:
 - betterend-forge-port:
