--- a/manifest.yml
+++ b/manifest.yml
@@ -128,6 +128,7 @@ mods:
 - ftb-ultimine:
 - geckolib:
 - gravestone-mod:
+- hats:
 - immersive-engineering:
 - immersive-petroleum:
 - industrial-foregoing:
