add color unchained

--- a/manifest.yml
+++ b/manifest.yml
@@ -81,6 +81,7 @@ mods:
 - clumps:
 - codechicken-lib-1-8:
 - cofh-core:
+- color-unchained:
 - coloured-tooltips:
 - compact-machines:
 - connected-glass:
@@ -105,7 +106,6 @@ mods:
 - druidcraft:
 - effortless-building:
 - eidolon:
-- emojiful:
 - enchantment-descriptions:
 - ender-storage-1-8:
 - endergetic:
