place back because I'm dumb

--- a/manifest.yml
+++ b/manifest.yml
@@ -81,6 +81,7 @@ mods:
 - clumps:
 - codechicken-lib-1-8:
 - cofh-core:
+- color-unchained:
 - coloured-tooltips:
 - compact-machines:
 - connected-glass:
