add simply tea, storage for computercraft

--- a/manifest.yml
+++ b/manifest.yml
@@ -219,10 +219,12 @@ mods:
 - simple-farming:
 - simply-jetpacks-2:
 - simply-light:
+- simply-tea:
 - sit:
 - snow-under-trees:
 - space-bosstools:
 - step:
+- storage-for-computercraft:
 - tinkers-construct:
 - tellme:
 - terraforged:
