--- a/manifest.yml
+++ b/manifest.yml
@@ -279,7 +279,7 @@ mods:
 - pregenforge:
     id: 335051
     serveronly: true
-# OptiFine
+# OptiFine.
 - entity-culling:
     clientonly: true
 - optiforge:
