--- a/manifest.yml
+++ b/manifest.yml
@@ -135,7 +135,7 @@ mods:
 - inventory-tweaks-renewed:
 - iron-chests:
 - jade:
-    url: https://github.com/kalkafox/Jade/releases/download/1.16-progressfade-ci/Jade-unofficial-1.16.4-2.7.5.jar
+    url: https://github.com/kalkafox/Jade/releases/download/1.16-ci/Jade-1.16.4-2.8.0.jar
 - jamd:
 - jaopca:
 - jei:
