add push script, add scarecrow's territory

--- a/manifest.yml
+++ b/manifest.yml
@@ -217,6 +217,7 @@ mods:
 - savage-and-ravage:
 - save-my-stronghold:
 - scannable:
+- scarecrows-territory:
 - scorge:
 - server-tab-info:
 - simple-farming:
