switch space-bosstools to beyond-earth

--- a/manifest.yml
+++ b/manifest.yml
@@ -58,6 +58,7 @@ mods:
 - better-badlands:
 - better-burning:
 - better-mobgriefing-gamerule:
+- beyond-earth:
 - biggerreactors:
 - biomes-o-plenty:
 - blockcarpentry:
@@ -227,7 +228,6 @@ mods:
 - simply-tea:
 - sit:
 - snow-under-trees:
-- space-bosstools:
 - step:
 - storage-for-computercraft:
 - tinkers-construct:
