abnormals core > blueprint, mgui > mutil

--- a/manifest.yml
+++ b/manifest.yml
@@ -28,7 +28,6 @@ mods:
 - no-potion-shift:
     clientonly: true
 - a-lib:
-- abnormals-core:
 - abnormals-delight:
 - absent-by-design:
 - abundance:
@@ -63,6 +62,7 @@ mods:
 - biomes-o-plenty:
 - blockcarpentry:
 - blood-magic:
+- blueprint:
 - brandons-core:
 - bookshelf:
 - botania:
@@ -173,13 +173,13 @@ mods:
     url: https://github.com/kalkafox/Mekanism/releases/download/v10.1/MekanismTools-1.16.5-10.0.21.homebaked.jar
 - mekanism:
     url: https://github.com/kalkafox/Mekanism/releases/download/v10.1/Mekanism-1.16.5-10.0.21.homebaked.jar
-- mgui:
 - mining-gadgets:
 - mmmmmmmmmmmm:
 - mob-grinding-utils:
 - more-sound-config:
 - morph-o-tool:
 - morpheus:
+- mutil:
 - mystical-world:
 - natures-compass:
 - nethers-delight:
