--- a/.minecraft/config/torchmaster.toml
+++ b/.minecraft/config/torchmaster.toml
@@ -34,7 +34,7 @@
 	#Note: Each entry needs to be put in quotes! Multiple Entries should be separated by comma.
 	#Block zombies: "+minecraft:zombie"
 	#Allow creepers: "-minecraft:creeper"
-	megaTorchEntityBlockListOverrides = []
+	megaTorchEntityBlockListOverrides = ["+alexmobs:*"]
 	#Controls how often the flare should try to place lights. 1 means every tick, 10 every 10th tick, etc
 	#Range: > 1
 	feralFlareTickRate = 5
