--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -8,14 +8,14 @@ on:
   workflow_dispatch:
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     container:
       image: kalka/wolfpackmaker:latest
     steps:
       - uses: actions/checkout@v2
       - run: git clone https://github.com/kalkafox/wolfpackmaker.git
-      - run: python3 wolfpackmaker/util/lock.py
+      - run: python3 src/wolfpackmaker/lock.py
       - run: zip -r Wolfpack-Odin.zip wolfpackmaker/wolfpackmaker.py wolfpackmaker/wolfpackmaker.bat wolfpackmaker/requirements-client.txt wolfpackmaker/multimc.bat .minecraft instance.cfg mmc-pack.json wolfpackodin.png
       - run: zip -r config.zip .minecraft mmc-pack.json
       - uses: "marvinpinto/action-automatic-releases@latest"
