update workflow manifest 3

--- a/instance.cfg
+++ b/instance.cfg
@@ -10,6 +10,8 @@ OverrideMemory=true
 OverrideWindow=false
 PermGen=128
 PostExitCommand=
+# If on Linux, change this to sh $INST_DIR\\wolfpackmaker\\multimc.sh
+# If on macOS, change this to sh $INST_DIR\\wolfpackmaker\\multimc.command
 PreLaunchCommand=$INST_DIR\\wolfpackmaker\\multimc.bat -r Wolfpack-Odin -c -mmc -rs latest
 WrapperCommand=
 iconKey=wolfpackodin
