--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -21,8 +21,8 @@ jobs:
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest"
-          prerelease: true
+          automatic_release_tag: "1.2.2"
+          prerelease: false
           files: |
             manifest.*
             *.zip
