fix instance pre-launch command

--- a/instance.cfg
+++ b/instance.cfg
@@ -10,9 +10,9 @@ OverrideMemory=true
 OverrideWindow=false
 PermGen=128
 PostExitCommand=
-# If on Linux, change this to sh $INST_DIR\\wolfpackmaker\\multimc.sh
-# If on macOS, change this to sh $INST_DIR\\wolfpackmaker\\multimc.command
-PreLaunchCommand=$INST_DIR\\wolfpackmaker\\multimc.bat -r Wolfpack-Odin -c -mmc -rs latest
+# If on Linux, change this to sh $INST_DIR/src/multimc.sh
+# If on macOS, change this to sh $INST_DIR/src/multimc.command
+PreLaunchCommand=$INST_DIR\\src\\multimc.bat -r Wolfpack-Odin -c -mmc
 WrapperCommand=
 iconKey=wolfpackodin
 name=Wolfpack-Odin
