add starlight x create

--- a/manifest.yml
+++ b/manifest.yml
@@ -223,6 +223,7 @@ mods:
 - simply-tea:
 - sit:
 - snow-under-trees:
+- starlight-x-create:
 - step:
 - storage-for-computercraft:
 - supermartijn642s-config-lib:
